# CMake Parser
# Copyright 2023 Timo Röhling <timo@gaussglocke.de>
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools >= 61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cmake_parser"
description = "Pure Python library to parse CMake scripts"
readme = "README.rst"
requires-python = ">= 3.6"
license = {file = "LICENSES/Apache-2.0.txt"}
authors = [
    { name = "Timo Röhling", email = "timo@gaussglocke.de"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/roehling/cmake_parser"
Documentation = "https://roehling.github.io/cmake_parser/"

[tool.setuptools_scm]
write_to = "src/cmake_parser/_version.py"
